--- a/lua_docs/class_path_finder.html
+++ b/lua_docs/class_path_finder.html
@@ -251,6 +251,7 @@ Public Member Functions</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
+<p>Used for safe check if any NPC is behind rocks/pits, doesn't disturb class members. </p>
 
 </div>
 </div>
