--- a/lua_docs/class_entity.html
+++ b/lua_docs/class_entity.html
@@ -101,6 +101,7 @@ Inheritance diagram for Entity:</div>
 <area href="class_entity_n_p_c.html" alt="EntityNPC" shape="rect" coords="98,336,186,360"/>
 <area href="class_entity_pickup.html" alt="EntityPickup" shape="rect" coords="98,392,186,416"/>
 <area href="class_entity_player.html" alt="EntityPlayer" shape="rect" coords="98,448,186,472"/>
+<area href="class_entity_tear.html" alt="EntityTear" shape="rect" coords="98,504,186,528"/>
 </map>
  </div></div>
 <table class="memberdecls">
